sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:15: error: not found: value getnombreValeurs
    for(i<-0 to getnombreValeurs - 2){
                ^