sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var swapped1 = true
  var swapped2 = true
	var i : Int = 0;
  do{
    swapped1 = false;
    for(i<-0 to  getNombreValeurs -2){
      if(!plusPetit(i,i+1)){
        echange(i,i+1);
        swapped1 = true;
      }
    }
    swapped2 = false;
    for(i<-0 to getnombreValeurs - 2){
      if(!plusPetit(i,i+1)){
        echange(i,i+1);
        swapped2 = true;
      }
    }
  }
  while(swapped1 || swapped2)
}